правки для браузеров

--- a/less/blocks/catalog-item.less
+++ b/less/blocks/catalog-item.less
@@ -2,11 +2,11 @@
   margin-bottom: 30px;
 
   &:hover {
-    box-shadow: 0 5px 5px @color-shadow;
+    box-shadow: 0 5px 5px @color-catalog-shadow;
   }
 
   &:active {
-    box-shadow: 0 3px 4px @color-shadow;
+    box-shadow: 0 3px 4px @color-catalog-shadow;
   }
 }
 
@@ -19,7 +19,7 @@
 .catalog-item__wrapper {
   .text(13px; 30px; @color-text);
   padding: 27px 30px 23px 30px;
-  border: 1px solid #ededed;
+  border: 1px solid @color-wrapper;
 }
 
 .catalog-item__title {
