--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -10,8 +10,8 @@
   margin-left: -160px;
   text-align: center;
   background-color: @color-body;
-  border: 1px solid #c6c6c6;
-  box-shadow: 0 3px 10px #c6c6c6;
+  border: 1px solid @color-shadow;
+  box-shadow: 0 3px 10px @color-shadow;
 }
 
 .modal__title {
