--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -19,7 +19,7 @@
   .text(19px; 18px; @color-title; bold);
   position: relative;
   display: block;
-  padding: 28px 0 19px 37px;
+  padding: 28px 0 32px 37px;
   border-top: 1px solid @color-border;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .page-footer__copyright-link:active {
-	color: #bfbfbf;
+	color: @color-copyright-active;
 }
 
 @media @tablet-widths {
@@ -61,7 +61,7 @@
   }
 
   .page-footer__icon-logo {
-    fill: #231f20;
+    fill: @color-social;
   }
 
   .page-footer__logo:hover .page-footer__icon-logo {
