--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -52,7 +52,7 @@
     &--close-nav {
       width: 20px;
       height: 2px;
-      background-color: #221f1f;
+      background-color: @color-toggle;
     }
 
     &--close-nav::before {
@@ -62,7 +62,7 @@
       left: 0;
       width: 20px;
       height: 2px;
-      background-color: #221f1f;
+      background-color: @color-toggle;
     }
 
     &--close-nav::after {
@@ -72,7 +72,7 @@
       left: 0;
       width: 20px;
       height: 2px;
-      background-color: #221f1f;
+      background-color: @color-toggle;
     }
 
     &--open-nav {
@@ -86,7 +86,7 @@
       left: -4px;
       width: 28px;
       height: 2px;
-      background-color: #221f1f;
+      background-color: @color-toggle;
       transform: rotate(45deg);
     }
 
@@ -97,7 +97,7 @@
       left: -4px;
       width: 28px;
       height: 2px;
-      background-color: #221f1f;
+      background-color: @color-toggle;
       transform: rotate(-45deg);
     }
   }
