--- a/less/global/variables.less
+++ b/less/global/variables.less
@@ -6,6 +6,8 @@
 @color-footer: #f1f1f1;
 @color-legend: #63d1bb;
 @color-category: #56c3b2;
+@color-category-active: #97e2d2;
+@color-category-active-two: #8dd5c9;
 @color-text: #444444;
 @color-title: #000000;
 @color-icon-nav: #d3d2d2;
@@ -23,3 +25,14 @@
 @color-shadow: #e8e8e8;
 @color-modal: #c7c7c7;
 @color-phone: #cccccc;
+@color-toggle: #221f1f;
+@color-interior: #3bb09d;
+@color-interior-hover: #59d5bc;
+@color-toys: #35a999;
+@color-interior-icon-hover: #29a592;
+@color-interior-icon-active: #44c0aa;
+@color-toys-icon-hover: #239f8e;
+@color-toys-icon-active: #37b2a0;
+@color-copyright-active: #bfbfbf;
+@color-catalog-shadow: #c6c6c6;
+@color-wrapper: #ededed;
