--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -9,10 +9,10 @@
     left: 0;
     display: block;
     width: 100%;
-    height: 25px;
+    height: 13px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 80% 100%;
+    background-size: 70% 100%;
   }
 }
 
@@ -119,6 +119,13 @@
 
 @media @tablet-widths {
 
+  .contacts {
+
+    &::before {
+      height: 20px;
+    }
+  }
+
   .contacts__wrapper {
     position: relative;
     padding: 60px 0 47px 0;
@@ -175,6 +182,13 @@
 }
 
 @media @desktop-widths {
+
+  .contacts {
+
+    &::before {
+      height: 30px;
+    }
+  }
 
   .contacts__wrapper {
     display: flex;
