--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -8,10 +8,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 25px;
+    height: 13px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 80% 100%;
+    background-size: 70% 100%;
   }
 }
 
@@ -75,6 +75,12 @@
 
 @media @tablet-widths {
 
+  .seo {
+    &::before {
+      height: 20px;
+    }
+  }
+
   .seo__wrapper{
     padding: 70px 0 55px 0;
   }
@@ -103,11 +109,17 @@
 
 @media @desktop-widths {
 
+  .seo {
+    &::before {
+      height: 30px;
+    }
+  }
+
   .seo__wrapper {
     padding: 82px 175px 62px 175px;
   }
 
   .seo__item {
-    padding-right: 80px;
+    padding-right: 40px;
   }
 }
