--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -67,7 +67,7 @@
     width: 768px;
     padding: 77px 50px 50px 50px;
     margin-bottom: 55px;
-    background: url("../img/review@1x.jpg") no-repeat;
+    background: @color-body url("../img/review@1x.jpg") no-repeat;
   }
 
   @media (min-resolution: 144dpi),
