--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -6,7 +6,7 @@
 .category__header {
   .container();
   padding: 52px 30px 104px 30px;
-  background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+  background: @color-body url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
 }
 
 @media (min-resolution: 144dpi),
