--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -91,17 +91,16 @@
   text-align: center;
   font-size: 0;
   line-height: 0;
-  background: url("../img/map-mobile@1x.jpg") no-repeat 50% 0;
+  background: @color-footer url("../img/map-mobile@1x.jpg") no-repeat 50% 0;
 
   &::before {
-    content: "";
+    content: url("../img/icon-map-pin.svg");
     position: absolute;
     top: 165px;
     left: 50%;
     width: 74px;
     height: 105px;
     margin-left: -37px;
-    background: url("../img/icon-map-pin.svg") no-repeat;
   }
 }
 
@@ -110,6 +109,10 @@
   .contacts__map {
     background-image: url("../img/map-mobile@2x.jpg");
   }
+}
+
+.contacts__iframe {
+  width: 100%;
 }
 
 .contacts__btn-wrapper {
