--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -12,6 +12,10 @@
   background-color: @color-body;
   border: 1px solid @color-shadow;
   box-shadow: 0 3px 10px @color-shadow;
+
+  &--show {
+    display: block;
+  }
 }
 
 .modal__title {
@@ -34,23 +38,23 @@
   justify-content: space-between;
 }
 
-.modal__radio {
-  display: none;
-}
-
 .modal__radio-label {
   .text(17px; 16px; @color-text; bold);
   width: 32%;
   padding: 16px;
   border: 2px solid @color-border;
+
+  &:hover {
+    border-color: @color-modal;
+  }
 }
 
-.modal__radio:checked + .modal__radio-label {
-  border-color: @color-legend;
-}
+.modal__radio {
+  display: none;
 
-.modal__radio-label:hover {
-  border-color: @color-modal;
+  &:checked + .modal__radio-label {
+    border-color: @color-legend;
+  }
 }
 
 .modal__btn{
@@ -60,10 +64,6 @@
   text-transform: uppercase;
   background-color: @color-legend;
   border: none;
-}
-
-.modal--show {
-  display: block;
 }
 
 @media @tablet-widths {
