--- a/less/blocks/overlay.less
+++ b/less/blocks/overlay.less
@@ -7,8 +7,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-}
 
-.overlay--show {
-	display: block;
+  &--show {
+    display: block;
+  }
 }
