--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -43,52 +43,66 @@
     content: url("../img/icon-feature-1.svg");
     top: 31px;
     left: 8px;
-    order: 1;
     width: 32px;
     height: 38px;
+  }
+
+  &--money {
+    order: 1;
   }
 
   &--money::before {
     content: url("../img/icon-feature-3.svg");
     top: 31px;
     left: 0;
-    order: 3;
     width: 47px;
     height: 28px;
+  }
+
+  &--heart {
+    order: 2;
   }
 
   &--heart::before {
     content: url("../img/icon-feature-5.svg");
     top: 36px;
     left: 8px;
-    order: 5;
     width: 34px;
     height: 28px;
+  }
+
+  &--yarn {
+    order: 3;
   }
 
   &--yarn::before {
     content: url("../img/icon-feature-2.svg");
     top: 34px;
     left: 4px;
-    order: 2;
     width: 35px;
     height: 35px;
+  }
+
+  &--rocket {
+    order: 4;
   }
 
   &--rocket::before {
     content: url("../img/icon-feature-4.svg");
     top: 35px;
     left: -5px;
-    order: 4;
     width: 55px;
     height: 24px;
+  }
+
+  &--gift {
+    order: 5;
   }
 
   &--gift::before {
     content: url("../img/icon-feature-6.svg");
     top: 34px;
     left: 4px;
-    order: 6;
     width: 33px;
     height: 33px;
   }
@@ -97,6 +111,7 @@
 @media @tablet-widths {
 
   .seo {
+
     &::before {
       height: 20px;
     }
@@ -122,6 +137,22 @@
     width: 50%;
     padding-right: 60px;
     padding-bottom: 25px;
+
+    &--money {
+      order: 2;
+    }
+
+    &--heart {
+      order: 4;
+    }
+
+    &--yarn {
+      order: 1;
+    }
+
+    &--rocket {
+      order: 3;
+    }
   }
 }
 
