--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -1,8 +1,8 @@
 .social {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-  padding: 23px 91px 26px 87px;
+  align-items: center;
+  padding: 15px 81px 16px 77px;
 }
 
 .social__icon-inst,
@@ -13,6 +13,7 @@
 
 .social__link {
   display: block;
+  padding: 10px;
   font-size: 0;
 
   &--inst:hover .social__icon-inst,
@@ -32,6 +33,6 @@
 
   .social {
     width: 200px;
-    padding: 26px 31px 26px 28px;
+    padding: 30px 21px 26px 18px;
   }
 }
