--- a/less/blocks/catalog-item.less
+++ b/less/blocks/catalog-item.less
@@ -53,10 +53,11 @@
 
 .catalog-item__basket {
   position: absolute;
-  top: 21px;
-  right: -4px;
-  width: 21px;
-  height: 21px;
+  top: 11px;
+  right: -14px;
+//  width: 21px;
+//  height: 21px;
+  padding: 10px;
   font-size: 0;
 
   &:hover .catalog-item__icon-basket {
