--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -9,10 +9,10 @@
     left: 0;
     display: block;
     width: 100%;
-    height: 13px;
+    height: 27px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 70% 100%;
+    background-size: auto 7px;
   }
 }
 
@@ -125,7 +125,7 @@
   .contacts {
 
     &::before {
-      height: 20px;
+      background-size: auto 17px;
     }
   }
 
@@ -189,7 +189,7 @@
   .contacts {
 
     &::before {
-      height: 30px;
+      background-size: auto 27px;
     }
   }
 
