--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -55,10 +55,10 @@
   &:focus {
     outline: none;
   }
-}
 
-.reviews__slider-btn--prev {
-  border-left: none;
+  &--prev {
+    border-left: none;
+  }
 }
 
 @media @tablet-widths {
