--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -7,11 +7,12 @@
     position: absolute;
     top: 0;
     left: 0;
+    display: block;
     width: 100%;
-    height: 13px;
+    height: 27px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 70% 100%;
+    background-size: auto 7px;
   }
 }
 
@@ -113,7 +114,7 @@
   .seo {
 
     &::before {
-      height: 20px;
+      background-size: auto 17px;
     }
   }
 
@@ -160,7 +161,7 @@
 
   .seo {
     &::before {
-      height: 30px;
+      background-size: auto 27px;
     }
   }
 
