--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -8,6 +8,8 @@
   .container();
   padding: 52px 30px 104px 30px;
   background: @color-header url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+	background-size: 180%;
+
 }
 
 @media (min-resolution: 144dpi),
