--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,9 @@ template {
 * {
   box-sizing: border-box;
 }
+html {
+  overflow-x: hidden;
+}
 body {
   width: 100%;
   background: #ffffff;
@@ -448,6 +451,10 @@ ul {
 }
 a {
   text-decoration: none;
+}
+input,
+textarea {
+  border-radius: 0;
 }
 input:hover,
 input:active,
@@ -561,6 +568,7 @@ input:focus {
   margin: 0 auto;
   padding: 52px 30px 104px 30px;
   background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+  background-size: 180%;
 }
 .category__wrapper {
   width: 320px;
@@ -649,10 +657,10 @@ input:focus {
   left: 0;
   display: block;
   width: 100%;
-  height: 13px;
+  height: 27px;
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat-x;
-  background-size: 70% 100%;
+  background-size: auto 7px;
 }
 .contacts__wrapper {
   width: 320px;
@@ -1060,6 +1068,9 @@ input:focus {
   background-color: #62d1ba;
   border-radius: 50%;
 }
+.order-form__radio-label:active::after {
+  display: block;
+}
 .order-form__checkbox-label {
   position: relative;
   padding: 21px 30px 22px 60px;
@@ -1092,17 +1103,26 @@ input:focus {
   border-bottom: 2px solid #000000;
   transform: rotate(-45deg);
 }
+.order-form__checkbox-label:active::after {
+  display: block;
+}
 .order-form__radio {
   display: none;
 }
 .order-form__radio:checked + .order-form__radio-label::after {
   display: block;
 }
+.order-form__radio:checked + .order-form__radio-label:active::after {
+  display: none;
+}
 .order-form__checkbox {
   display: none;
 }
 .order-form__checkbox:checked + .order-form__checkbox-label::after {
   display: block;
+}
+.order-form__checkbox:checked + .order-form__checkbox-label:active::after {
+  display: none;
 }
 .order-form__fullname {
   padding-top: 5px;
@@ -1391,11 +1411,12 @@ input:focus {
   position: absolute;
   top: 0;
   left: 0;
+  display: block;
   width: 100%;
-  height: 13px;
+  height: 27px;
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat-x;
-  background-size: 70% 100%;
+  background-size: auto 7px;
 }
 .seo__wrapper {
   width: 320px;
@@ -1589,10 +1610,10 @@ input:focus {
     position: absolute;
     bottom: -10px;
     left: 0;
-    height: 36px;
+    height: 30px;
     width: 100%;
     background-image: url("../img/bg-zigzag-fill.svg");
-    background-size: 80% 100%;
+    background-size: auto 30px;
     background-repeat: repeat-x;
   }
   .category__wrapper {
@@ -1626,7 +1647,7 @@ input:focus {
     width: 668px;
   }
   .contacts::before {
-    height: 20px;
+    background-size: auto 17px;
   }
   .contacts__wrapper {
     position: relative;
@@ -1799,11 +1820,13 @@ input:focus {
     display: block;
     padding: 17px 50px 17px 18px;
   }
+  .main-nav__item--color,
   .main-nav__item--tablet-color {
     background-color: #f1f1f1;
   }
-  .main-nav__item--color {
-    background-color: #f1f1f1;
+  .main-nav__item--incolor,
+  .main-nav__item--tablet-incolor {
+    background-color: #f9f9f9;
   }
   .main-nav__item-icon--search {
     top: 33px;
@@ -2101,7 +2124,7 @@ input:focus {
   .page-header::after {
     content: "";
     position: absolute;
-    top: 85px;
+    top: 86px;
     left: 0;
     width: 100%;
     height: 200px;
@@ -2173,7 +2196,7 @@ input:focus {
     width: 668px;
   }
   .seo::before {
-    height: 20px;
+    background-size: auto 17px;
   }
   .seo__wrapper {
     padding: 70px 0 55px 0;
@@ -2211,6 +2234,17 @@ input:focus {
   .social {
     width: 200px;
     padding: 30px 21px 26px 18px;
+  }
+}
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (min-resolution: 1.5dppx) {
+  .category__header {
+    background-image: url("../img/hero-desktop@2x.jpg");
+  }
+  .contacts__map {
+    background-image: url("../img/map-tablet@2x.jpg");
+  }
+  .reviews__wrapper {
+    background-image: url("../img/review@2x.jpg");
   }
 }
 @media (min-width: 1150px) {
@@ -2269,6 +2303,10 @@ input:focus {
   .category__wrapper {
     width: 1050px;
   }
+  .category::after {
+    height: 36px;
+    background-size: auto 36px;
+  }
   .category__link {
     padding-right: 335px;
   }
@@ -2283,7 +2321,7 @@ input:focus {
     width: 1050px;
   }
   .contacts::before {
-    height: 30px;
+    background-size: auto 27px;
   }
   .contacts__wrapper {
     display: flex;
@@ -2411,11 +2449,15 @@ input:focus {
   .main-nav__item-logo--tablet {
     display: none;
   }
-  .main-nav__item--tablet-color {
+  .main-nav__item--tablet-color,
+  .main-nav__item--tablet-incolor {
     background-color: #ffffff;
   }
   .main-nav__item--desktop-color {
     background-color: #f1f1f1;
+  }
+  .main-nav__item--desktop-incolor {
+    background-color: #f9f9f9;
   }
   .manufacture__wrapper {
     width: 1050px;
@@ -2505,6 +2547,9 @@ input:focus {
   .page-footer__wrapper {
     width: 1050px;
   }
+  .page-header::after {
+    top: 87px;
+  }
   .page-header__wrapper {
     width: 1150px;
   }
@@ -2530,7 +2575,7 @@ input:focus {
     width: 1050px;
   }
   .seo::before {
-    height: 30px;
+    background-size: auto 27px;
   }
   .seo__wrapper {
     padding: 82px 175px 62px 175px;
@@ -2539,28 +2584,17 @@ input:focus {
     padding-right: 40px;
   }
 }
+@media (min-width: 1150px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 1150px) and (min-resolution: 144dpi), (min-width: 1150px) and (min-resolution: 1.5dppx) {
+  .contacts__map {
+    background-image: url("../img/map-desktop@2x.jpg");
+  }
+}
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .category__header {
     background-image: url("../img/hero-mobile@2x.jpg");
   }
   .contacts__map {
     background-image: url("../img/map-mobile@2x.jpg");
-  }
-}
-@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (min-resolution: 1.5dppx) {
-  .category__header {
-    background-image: url("../img/hero-desktop@2x.jpg");
-  }
-  .contacts__map {
-    background-image: url("../img/map-tablet@2x.jpg");
-  }
-  .reviews__wrapper {
-    background-image: url("../img/review@2x.jpg");
-  }
-}
-@media (min-width: 1150px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 1150px) and (min-resolution: 144dpi), (min-width: 1150px) and (min-resolution: 1.5dppx) {
-  .contacts__map {
-    background-image: url("../img/map-desktop@2x.jpg");
   }
 }
 @media (max-width: 767px) {
